Fixed login hiding behind profile pictures

--- a/public/stylesheets/sass/layout.sass
+++ b/public/stylesheets/sass/layout.sass
@@ -589,6 +589,7 @@ a:focus
   width: 488px
   top: 180px
   left: 274px
+  z-index: 11
 
 .top_curve_join
   float: left
